splash/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: splash
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: splash
  name: splash
  namespace: splash
spec:
  ports:
    - name: "8050"
      port: 8050
      targetPort: 8050
  selector:
    app: splash
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: splash
  name: splash
  namespace: splash
spec:
  replicas: 3
  selector:
    matchLabels:
      app: splash
  revisionHistoryLimit: 0
  strategy: {}
  template:
    metadata:
      labels:
        app: splash
    spec:
      containers:
        - image: scrapinghub/splash
          name: splash
          ports:
            - containerPort: 8050
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.4"
            limits:
              memory: "4Gi"
              cpu: "0.8"
      restartPolicy: Always
status: {}
