splash/ingress-tls.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-splash
  namespace: splash
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
    - hosts:
        - splash.cuiqingcai.com
      secretName: tls-splash
  rules:
    - host: splash.cuiqingcai.com
      http:
        paths:
          - backend:
              serviceName: splash
              servicePort: 8050
            path: /
